--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@react-icons/all-files": "^4.1.0",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.0",
     "@tanstack/react-query": "^5.66.0",
@@ -24,10 +25,11 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-helmet-async": "^2.0.5",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-toast": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
