--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@tanstack/react-query": "^5.71.10",
     "react-toastify": "^11.0.5"
   }
