--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@headlessui/react": "^2.2.1",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tanstack/react-query": "^5.71.10",
     "date-fns": "^4.1.0",
     "prop-types": "^15.8.1",
